--- a/index.html
+++ b/index.html
@@ -416,13 +416,14 @@ header p {
   position:relative;
 }
 
-.usahanaLeft{
+.usahanaRight{
   position:absolute;
-  left:-180px;   /* ← 左に出す */
+  right:-180px;   /* ← rightに変更！ */
   top:50%;
   transform:translateY(-50%);
   width:170px;
 }
+
 @media (max-width:600px){
   .usahanaLeft{
     left:-70px;
@@ -568,7 +569,8 @@ header p {
 
     <!-- 2日目 -->
     <section id="day2" class="card day2Card">
-      <img src="うさはな.png" class="usahanaLeft" alt="usahana">
+      <img src="うさはな.png" class="usahanaRight" alt="usahana">
+
     
       <div class="dayTitle">
         <h2>2日目（2/21）</h2>
